--- a/site/themes/custom/templates/base.tmpl
+++ b/site/themes/custom/templates/base.tmpl
@@ -21,7 +21,7 @@
     </header>
 
     <main class="content container">
-      ${content}
+      <%block name="content"></%block>
     </main>
 
     <footer class="site-footer">
