--- a/site/themes/custom/templates/base.tmpl
+++ b/site/themes/custom/templates/base.tmpl
@@ -13,8 +13,8 @@
       <div class="container">
         <a class="logo" href="${url_replacer('rel_path', lang, '/index.html')}">${blog_title}</a>
         <nav class="nav">
-          <a href="${url_replacer('rel_path', lang, '/pages/home/')}">Главная</a>
-          <a href="${url_replacer('rel_path', lang, '/pages/report/')}">Отчёт</a>
+          <a href="../home/">Главная</a>
+          <a href="../report/">Отчёт</a>
           <a href="${url_replacer('rel_path', lang, '/archive.html')}">Архив</a>
         </nav>
       </div>
